# Jacobian-Chaining

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
additionals/acda25/configs/: config_batch.in  config_example_figure_2.1.in  config_example_figure_2.3.in  config_example_figure_2.4.in
additionals/acda25/datasets/: results_length_1.csv  results_length_2.csv  results_length_3.csv  results_length_4.csv  results_length_5.csv  results_length_6.csv  results_length_7.csv  results_length_8.csv
additionals/cmake/: FindCpplint.cmake  FindGBench.cmake  FindGTest.cmake  Findiwyu.cmake  JCDP_summary.cmake  build_types.cmake  compiler_flags.cmake  configure_compiler_warnings.cmake  cpplint.cmake  cxx_standard_library.cmake  enable_intrinsics.cmake  enable_position_independent_code.cmake  enable_sanitation.cmake  include_what_you_use.cmake  openmp_backend.cmake  print_helper.cmake
additionals/cmake/scripts/: run_iwyu.cmake
additionals/cmake/util/: check_flags.cmake  find_package.cmake  print.cmake
additionals/configs/: config.in  config_batch.in  config_batch_small.in  config_example_figure_2.in
additionals/docker/: Dockerfile
additionals/iwyu/: gtest.imp  jcdp.imp
additionals/scripts/: format_code.py  generate_plots.py  pyproject.toml
include/: CMakeLists.txt
include/jcdp/: CMakeLists.txt  dp_solver.hpp  generator.hpp  graphml.hpp  jacobian.hpp  jacobian.inl  jacobian_chain.hpp  operation.hpp  sequence.hpp
include/jcdp/optimizer/: CMakeLists.txt  branch_and_bound.hpp  branch_and_bound_alternative.hpp  dynamic_programming.hpp  optimizer.hpp
include/jcdp/scheduler/: CMakeLists.txt  branch_and_bound.hpp  priority_list.hpp  scheduler.hpp
include/jcdp/util/: CMakeLists.txt  dot_writer.hpp  properties.hpp  properties.inl  timer.hpp
src/: CMakeLists.txt  jcdp.cpp  jcdp_batch.cpp
